src/parser/PascalCompilerParser.py
# Generated from src/parser/PascalCompiler.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PascalCompilerParser ( Parser ):

    grammarFileName = "PascalCompiler.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'const'", "'var'", "'begin'", 
                     "'end'", "'if'", "'then'", "'else'", "'while'", "'do'", 
                     "'for'", "'to'", "'downto'", "'procedure'", "'function'", 
                     "'repeat'", "'until'", "'case'", "'of'", "'array'", 
                     "'write'", "'writeln'", "'integer'", "'real'", "'boolean'", 
                     "'char'", "'longint'", "'string'", "'='", "'<>'", "'<='", 
                     "'<'", "'>='", "'>'", "'+'", "'-'", "'*'", "'/'", "'div'", 
                     "'mod'", "'and'", "'or'", "'not'", "':='", "';'", "','", 
                     "'..'", "'.'", "'('", "')'", "'['", "']'", "':'" ]

    symbolicNames = [ "<INVALID>", "KW_PROGRAM", "KW_CONST", "KW_VAR", "KW_BEGIN", 
                      "KW_END", "KW_IF", "KW_THEN", "KW_ELSE", "KW_WHILE", 
                      "KW_DO", "KW_FOR", "KW_TO", "KW_DOWNTO", "KW_PROCEDURE", 
                      "KW_FUNCTION", "KW_REPEAT", "KW_UNTIL", "KW_CASE", 
                      "KW_OF", "KW_ARRAY", "KW_WRITE", "KW_WRITELN", "TYPE_INT", 
                      "TYPE_REAL", "TYPE_BOOL", "TYPE_CHAR", "TYPE_LONG", 
                      "TYPE_STRING", "OP_EQ", "OP_NE", "OP_LE", "OP_LT", 
                      "OP_GE", "OP_GT", "OP_ADD", "OP_SUB", "OP_MUL", "OP_DIV", 
                      "OP_DIV_INT", "OP_MOD", "OP_AND", "OP_OR", "OP_NOT", 
                      "SYM_ASSIGN", "SYM_SEMI", "SYM_COMMA", "SYM_DOTDOT", 
                      "SYM_DOT", "SYM_LPAREN", "SYM_RPAREN", "SYM_LBRACKET", 
                      "SYM_RBRACKET", "SYM_COLON", "CHAR_LIT", "STRING_LIT", 
                      "BOOL_CONST", "REAL_NUMBER", "INT_NUMBER", "IDENTIFIER", 
                      "COMMENT", "WS" ]

    RULE_pascalProgram = 0
    RULE_executionBlock = 1
    RULE_declSection = 2
    RULE_constDeclPart = 3
    RULE_constDecl = 4
    RULE_varDeclPart = 5
    RULE_varDecl = 6
    RULE_idList = 7
    RULE_dataType = 8
    RULE_arrayType = 9
    RULE_idxRange = 10
    RULE_sign = 11
    RULE_subprogramDecls = 12
    RULE_subprogramDecl = 13
    RULE_subprogramHeader = 14
    RULE_paramList = 15
    RULE_paramGroup = 16
    RULE_designator = 17
    RULE_compoundStmt = 18
    RULE_stmtList = 19
    RULE_statement = 20
    RULE_caseItem = 21
    RULE_caseLabels = 22
    RULE_constantValue = 23
    RULE_argList = 24
    RULE_log_expr = 25
    RULE_expr = 26

    ruleNames =  [ "pascalProgram", "executionBlock", "declSection", "constDeclPart", 
                   "constDecl", "varDeclPart", "varDecl", "idList", "dataType", 
                   "arrayType", "idxRange", "sign", "subprogramDecls", "subprogramDecl", 
                   "subprogramHeader", "paramList", "paramGroup", "designator", 
                   "compoundStmt", "stmtList", "statement", "caseItem", 
                   "caseLabels", "constantValue", "argList", "log_expr", 
                   "expr" ]

    EOF = Token.EOF
    KW_PROGRAM=1
    KW_CONST=2
    KW_VAR=3
    KW_BEGIN=4
    KW_END=5
    KW_IF=6
    KW_THEN=7
    KW_ELSE=8
    KW_WHILE=9
    KW_DO=10
    KW_FOR=11
    KW_TO=12
    KW_DOWNTO=13
    KW_PROCEDURE=14
    KW_FUNCTION=15
    KW_REPEAT=16
    KW_UNTIL=17
    KW_CASE=18
    KW_OF=19
    KW_ARRAY=20
    KW_WRITE=21
    KW_WRITELN=22
    TYPE_INT=23
    TYPE_REAL=24
    TYPE_BOOL=25
    TYPE_CHAR=26
    TYPE_LONG=27
    TYPE_STRING=28
    OP_EQ=29
    OP_NE=30
    OP_LE=31
    OP_LT=32
    OP_GE=33
    OP_GT=34
    OP_ADD=35
    OP_SUB=36
    OP_MUL=37
    OP_DIV=38
    OP_DIV_INT=39
    OP_MOD=40
    OP_AND=41
    OP_OR=42
    OP_NOT=43
    SYM_ASSIGN=44
    SYM_SEMI=45
    SYM_COMMA=46
    SYM_DOTDOT=47
    SYM_DOT=48
    SYM_LPAREN=49
    SYM_RPAREN=50
    SYM_LBRACKET=51
    SYM_RBRACKET=52
    SYM_COLON=53
    CHAR_LIT=54
    STRING_LIT=55
    BOOL_CONST=56
    REAL_NUMBER=57
    INT_NUMBER=58
    IDENTIFIER=59
    COMMENT=60
    WS=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PascalProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PROGRAM(self):
            return self.getToken(PascalCompilerParser.KW_PROGRAM, 0)

        def IDENTIFIER(self):
            return self.getToken(PascalCompilerParser.IDENTIFIER, 0)

        def SYM_SEMI(self):
            return self.getToken(PascalCompilerParser.SYM_SEMI, 0)

        def executionBlock(self):
            return self.getTypedRuleContext(PascalCompilerParser.ExecutionBlockContext,0)


        def SYM_DOT(self):
            return self.getToken(PascalCompilerParser.SYM_DOT, 0)

        def getRuleIndex(self):
            return PascalCompilerParser.RULE_pascalProgram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPascalProgram" ):
                listener.enterPascalProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPascalProgram" ):
                listener.exitPascalProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPascalProgram" ):
                return visitor.visitPascalProgram(self)
            else:
                return visitor.visitChildren(self)




    def pascalProgram(self):

        localctx = PascalCompilerParser.PascalProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pascalProgram)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(PascalCompilerParser.KW_PROGRAM)
            self.state = 55
            self.match(PascalCompilerParser.IDENTIFIER)
            self.state = 56
            self.match(PascalCompilerParser.SYM_SEMI)
            self.state = 57
            self.executionBlock()
            self.state = 58
            self.match(PascalCompilerParser.SYM_DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExecutionBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declSection(self):
            return self.getTypedRuleContext(PascalCompilerParser.DeclSectionContext,0)


        def compoundStmt(self):
            return self.getTypedRuleContext(PascalCompilerParser.CompoundStmtContext,0)


        def getRuleIndex(self):
            return PascalCompilerParser.RULE_executionBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExecutionBlock" ):
                listener.enterExecutionBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExecutionBlock" ):
                listener.exitExecutionBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExecutionBlock" ):
                return visitor.visitExecutionBlock(self)
            else:
                return visitor.visitChildren(self)




    def executionBlock(self):

        localctx = PascalCompilerParser.ExecutionBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_executionBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.declSection()
            self.state = 61
            self.compoundStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subprogramDecls(self):
            return self.getTypedRuleContext(PascalCompilerParser.SubprogramDeclsContext,0)


        def constDeclPart(self):
            return self.getTypedRuleContext(PascalCompilerParser.ConstDeclPartContext,0)


        def varDeclPart(self):
            return self.getTypedRuleContext(PascalCompilerParser.VarDeclPartContext,0)


        def getRuleIndex(self):
            return PascalCompilerParser.RULE_declSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclSection" ):
                listener.enterDeclSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclSection" ):
                listener.exitDeclSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclSection" ):
                return visitor.visitDeclSection(self)
            else:
                return visitor.visitChildren(self)




    def declSection(self):

        localctx = PascalCompilerParser.DeclSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 63
                self.constDeclPart()


            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 66
                self.varDeclPart()


            self.state = 69
            self.subprogramDecls()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_CONST(self):
            return self.getToken(PascalCompilerParser.KW_CONST, 0)

        def constDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalCompilerParser.ConstDeclContext)
            else:
                return self.getTypedRuleContext(PascalCompilerParser.ConstDeclContext,i)


        def getRuleIndex(self):
            return PascalCompilerParser.RULE_constDeclPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclPart" ):
                listener.enterConstDeclPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclPart" ):
                listener.exitConstDeclPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDeclPart" ):
                return visitor.visitConstDeclPart(self)
            else:
                return visitor.visitChildren(self)




    def constDeclPart(self):

        localctx = PascalCompilerParser.ConstDeclPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constDeclPart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(PascalCompilerParser.KW_CONST)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.constDecl()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==59):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PascalCompilerParser.IDENTIFIER, 0)

        def OP_EQ(self):
            return self.getToken(PascalCompilerParser.OP_EQ, 0)

        def constantValue(self):
            return self.getTypedRuleContext(PascalCompilerParser.ConstantValueContext,0)


        def SYM_SEMI(self):
            return self.getToken(PascalCompilerParser.SYM_SEMI, 0)

        def sign(self):
            return self.getTypedRuleContext(PascalCompilerParser.SignContext,0)


        def getRuleIndex(self):
            return PascalCompilerParser.RULE_constDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDecl" ):
                listener.enterConstDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDecl" ):
                listener.exitConstDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):

        localctx = PascalCompilerParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(PascalCompilerParser.IDENTIFIER)
            self.state = 78
            self.match(PascalCompilerParser.OP_EQ)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35 or _la==36:
                self.state = 79
                self.sign()


            self.state = 82
            self.constantValue()
            self.state = 83
            self.match(PascalCompilerParser.SYM_SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_VAR(self):
            return self.getToken(PascalCompilerParser.KW_VAR, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalCompilerParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(PascalCompilerParser.VarDeclContext,i)


        def getRuleIndex(self):
            return PascalCompilerParser.RULE_varDeclPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclPart" ):
                listener.enterVarDeclPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclPart" ):
                listener.exitVarDeclPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclPart" ):
                return visitor.visitVarDeclPart(self)
            else:
                return visitor.visitChildren(self)




    def varDeclPart(self):

        localctx = PascalCompilerParser.VarDeclPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varDeclPart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(PascalCompilerParser.KW_VAR)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.varDecl()
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==59):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(PascalCompilerParser.IdListContext,0)


        def SYM_COLON(self):
            return self.getToken(PascalCompilerParser.SYM_COLON, 0)

        def dataType(self):
            return self.getTypedRuleContext(PascalCompilerParser.DataTypeContext,0)


        def SYM_SEMI(self):
            return self.getToken(PascalCompilerParser.SYM_SEMI, 0)

        def getRuleIndex(self):
            return PascalCompilerParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = PascalCompilerParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.idList()
            self.state = 92
            self.match(PascalCompilerParser.SYM_COLON)
            self.state = 93
            self.dataType()
            self.state = 94
            self.match(PascalCompilerParser.SYM_SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PascalCompilerParser.IDENTIFIER)
            else:
                return self.getToken(PascalCompilerParser.IDENTIFIER, i)

        def SYM_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PascalCompilerParser.SYM_COMMA)
            else:
                return self.getToken(PascalCompilerParser.SYM_COMMA, i)

        def getRuleIndex(self):
            return PascalCompilerParser.RULE_idList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdList" ):
                listener.enterIdList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdList" ):
                listener.exitIdList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)




    def idList(self):

        localctx = PascalCompilerParser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(PascalCompilerParser.IDENTIFIER)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 97
                self.match(PascalCompilerParser.SYM_COMMA)
                self.state = 98
                self.match(PascalCompilerParser.IDENTIFIER)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_INT(self):
            return self.getToken(PascalCompilerParser.TYPE_INT, 0)

        def TYPE_REAL(self):
            return self.getToken(PascalCompilerParser.TYPE_REAL, 0)

        def TYPE_BOOL(self):
            return self.getToken(PascalCompilerParser.TYPE_BOOL, 0)

        def TYPE_CHAR(self):
            return self.getToken(PascalCompilerParser.TYPE_CHAR, 0)

        def TYPE_LONG(self):
            return self.getToken(PascalCompilerParser.TYPE_LONG, 0)

        def TYPE_STRING(self):
            return self.getToken(PascalCompilerParser.TYPE_STRING, 0)

        def arrayType(self):
            return self.getTypedRuleContext(PascalCompilerParser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return PascalCompilerParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataType" ):
                return visitor.visitDataType(self)
            else:
                return visitor.visitChildren(self)




    def dataType(self):

        localctx = PascalCompilerParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dataType)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(PascalCompilerParser.TYPE_INT)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(PascalCompilerParser.TYPE_REAL)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(PascalCompilerParser.TYPE_BOOL)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.match(PascalCompilerParser.TYPE_CHAR)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.match(PascalCompilerParser.TYPE_LONG)
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.match(PascalCompilerParser.TYPE_STRING)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 7)
                self.state = 110
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_ARRAY(self):
            return self.getToken(PascalCompilerParser.KW_ARRAY, 0)

        def SYM_LBRACKET(self):
            return self.getToken(PascalCompilerParser.SYM_LBRACKET, 0)

        def idxRange(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalCompilerParser.IdxRangeContext)
            else:
                return self.getTypedRuleContext(PascalCompilerParser.IdxRangeContext,i)


        def SYM_RBRACKET(self):
            return self.getToken(PascalCompilerParser.SYM_RBRACKET, 0)

        def KW_OF(self):
            return self.getToken(PascalCompilerParser.KW_OF, 0)

        def dataType(self):
            return self.getTypedRuleContext(PascalCompilerParser.DataTypeContext,0)


        def SYM_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PascalCompilerParser.SYM_COMMA)
            else:
                return self.getToken(PascalCompilerParser.SYM_COMMA, i)

        def getRuleIndex(self):
            return PascalCompilerParser.RULE_arrayType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayType" ):
                listener.enterArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayType" ):
                listener.exitArrayType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = PascalCompilerParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(PascalCompilerParser.KW_ARRAY)
            self.state = 114
            self.match(PascalCompilerParser.SYM_LBRACKET)
            self.state = 115
            self.idxRange()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 116
                self.match(PascalCompilerParser.SYM_COMMA)
                self.state = 117
                self.idxRange()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(PascalCompilerParser.SYM_RBRACKET)
            self.state = 124
            self.match(PascalCompilerParser.KW_OF)
            self.state = 125
            self.dataType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdxRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constantValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalCompilerParser.ConstantValueContext)
            else:
                return self.getTypedRuleContext(PascalCompilerParser.ConstantValueContext,i)


        def SYM_DOTDOT(self):
            return self.getToken(PascalCompilerParser.SYM_DOTDOT, 0)

        def sign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalCompilerParser.SignContext)
            else:
                return self.getTypedRuleContext(PascalCompilerParser.SignContext,i)


        def getRuleIndex(self):
            return PascalCompilerParser.RULE_idxRange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdxRange" ):
                listener.enterIdxRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdxRange" ):
                listener.exitIdxRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdxRange" ):
                return visitor.visitIdxRange(self)
            else:
                return visitor.visitChildren(self)




    def idxRange(self):

        localctx = PascalCompilerParser.IdxRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_idxRange)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35 or _la==36:
                self.state = 127
                self.sign()


            self.state = 130
            self.constantValue()
            self.state = 131
            self.match(PascalCompilerParser.SYM_DOTDOT)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35 or _la==36:
                self.state = 132
                self.sign()

